# YAIBA-democratization

./: .gitignore  LICENSE  README.md  YAIBA_BI.ipynb  demo.py  generate_demo.py  pyproject.toml  requirements.txt  setup.py  コミットの説明.txt
.github/: pull_request_template.md
content/YAIBA_data/output/: stats_2025-05-16_engineer_meeting.txt  stats_2025-09-25_test.txt
docs/: 用語集.md  設計書_UIUX.md  設計書_エラーコード.md  設計書_エラーコード.txt  設計書_データ取り込み・前処理（I-O標準化）.md  設計書_可視化(ヒストグラム).md  設計書_可視化(動画).md  設計書_可視化（ヒートマップ）.md  設計書_可視化（人数推移・軌跡・統計情報）.md  設計書_統計.txt  設計用テンプレート.md
docs/データI/: O & スキーマ詳細設計書
src/engine/core/: README.md  __init__.py  logging_util.py  movie.py  naming.py  validation.py  viz_people.py  writecsv.py  yaiba_loader.py
src/yaiba_bi/: __init__.py  colab_ui.py  yaiba_colab_ui.py
src/yaiba_bi/core/: __init__.py  concurrency.py  engine.py  event_log_visualizer.py  fontconfig.py  heatmap.py  histogram.py  logging_util.py  movie.py  naming.py  spec_errors.py  stats_basic.py  trajectory.py  validation.py  yaiba_loader.py
tests/: conftest.py  heatmap_test.py  test.ipynb  test_event_log_visualizer.py  test_heatmap.py  test_histogram.py  test_movie_generator.py  test_visualization.py
