[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaiba-bi"
version = "0.0.0"
description = "Tools for analyzing and visualizing YAIBA VRChat logs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "YAIBA Democratization Project"}
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "PyYAML",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/YAIBA-democratization/YAIBA-democratization"
"Bug Tracker" = "https://github.com/YAIBA-democratization/YAIBA-democratization/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]